# awslabs-mcp

./: .secrets.baseline  README.md
src/aws-api-mcp-server/: README.md
src/aws-iac-mcp-server/: README.md  pyproject.toml
src/aws-iac-mcp-server/awslabs/aws_iac_mcp_server/: __init__.py  server.py
src/aws-iac-mcp-server/awslabs/aws_iac_mcp_server/tools/: iac_tools.py
src/aws-iac-mcp-server/tests/: test_server.py
src/aws-iac-mcp-server/tests/tools/: test_cdk_search_documentation_tool.py  test_read_cdk_documentation_page_tool.py  test_search_cdk_samples_and_constructs_tool.py  test_search_cloudformation_documentation_tool.py
src/dynamodb-mcp-server/: README.md
src/dynamodb-mcp-server/awslabs/dynamodb_mcp_server/: common.py  database_analyzers.py  markdown_formatter.py  server.py
src/dynamodb-mcp-server/awslabs/dynamodb_mcp_server/db_analyzer/: __init__.py  analyzer_utils.py  base_plugin.py  mysql.py  plugin_registry.py  postgresql.py  sqlserver.py
src/dynamodb-mcp-server/awslabs/dynamodb_mcp_server/prompts/: dynamodb_architect.md
src/dynamodb-mcp-server/tests/: __init__.py  test_analyzer_utils.py  test_common.py  test_database_analyzer.py  test_db_analyzer_plugins.py  test_dynamodb_server.py  test_markdown_formatter.py
